--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -13,27 +13,28 @@
             <span id="tagline">Git y Github</span>
         </div>
         <div id="post">
-            <h1>Alumn@: [Nombre Completo]</h1>
+            <h1>Alumn@: Agustín Canterla González</h1>
             <ol>
                 <li>
                     <h3>¿Que es un sistema de control de versiones?</h3>
-                    [Pon tu respuesta]
+                    Es una herramienta que ayudas a gestionar los cambios en el código fuente
                 </li>
                 <li>
                     <h3>¿Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    Git es distribuido, tiene gestión de ramas y es mas eficiente.
+		    GitHub tiene interfaz grafica, integración de herramientas y mas comunidad
                 </li>
                 <li>
                     <h3>¿Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    Con el comando git branch [Nombre]
                 </li>
                 <li>
                     <h3>¿Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    Con el comando git clone [URL]
                 </li>
                 <li>
                     <h3>¿Cómo puedo bajar los ultimos cambios de un repositorio?</h3>
-                    [Pon tu respuesta]
+                    
                 </li>
                 <li>
                     <h3>¿Cómo puedo gener un tag?</h3>
