--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -34,15 +34,15 @@
                 </li>
                 <li>
                     <h3>¿Cómo puedo bajar los ultimos cambios de un repositorio?</h3>
-                    
+                    Con el comando git pull [alias] [rama]
                 </li>
                 <li>
                     <h3>¿Cómo puedo gener un tag?</h3>
-                    [Pon tu respuesta]
+                    Con el comando git tag
                 </li>
                 <li>
                     <h3>Cómo hago una mezcla de ramas?</h3>
-                    [Pon tu respuesta]
+                    Con el comando git merge
                 </li>
                 <li>
                     <h3>¿Cómo puedo moverme a un commit especifico?</h3>
