--- a/ejercicioGIT.html
+++ b/ejercicioGIT.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8">
     <title>.: Examen :.</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <style>
+	*{
+	background-color:black;
+	color: red;}
+   </style>
 </head>
 <body>
     <div id="container">
